@@ -7,6 +7,8 @@ date Version 3.00.47 (Beta 3)
 ^ FS#218 - "Having file dialogs remember their type-selection, e.g. *.png or *.bmp"
 ^ Added "All image files" to the file type filter for the file browser for
   bitmap properties.
+* Switch to Code::Blocks splashscreen class to fix linux transparency.
+  This resolves FS#224 - "Splashscreen problem in Linux".
 
 07/27/2007 Version 3.00.46 (Beta 3)
 + Added "column_sizes" and "row_sizes" properties to wxGrid.
